<resources>
    <string name="app_name">Saa</string>
    <string name="app_title">Saa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Ingresar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">"INICIAR SESION"</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tagInfoLogin">
        "PARA AYUDARTE A ENCONTRAR EL MEJOR LUGAR DISPONIBLE, POR FAVOR, PRIMERO IDENTÍFICATE"
    </string>
    <string name="rememberMe">
        "Recordarme"
    </string>
    <string name="forgotPassword">
        "Olvidaste Tu contraseña?"
    </string>
    <string name="notAccount">
        "¿Aún no tienes Cuenta?"
    </string>
    <string name="register">
        "Registrarse"
    </string>
    <string name="title_activity_begin">INICIO</string>
    <string name="findParking">
        "ENCUENTRA TU ESTACIONAMIENTO"
    </string>
    <string name="managePayMethods">
        "ADMINISTRAR TUS MÉTODOS DE PAGO"
    </string>
    <string name="logout">
        "CERRAR SESIÓN"
    </string>
    <string name="longName">Space Always Available</string>
    <string name="webMasterContact">alfred.webMaster@pcentaury.com</string>
    <string name="title_activity_choose_parking">SELECCIONA TU ESTACIONAMIENTO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance">Balance</string>
    <string name="time">Tiempo</string>
    <string name="config">Configuración</string>
    <string name="herram">Herramientas</string>
    <string name="addPayMethod">Agregar Nuevo Método de pago</string>
    <string name="payHistory">Historial de Pagos</string>
    <string name="refresh">Actualizar</string>
    <string name="welcomereg">Bienvenido a la Familia SAA</string>
    <string name="infoUser00">Primero obsequianos tus datos Generales.</string>
    <string name="signData">Escribe los datos a utilizar para ingresar a la plataforma.</string>
    <string name="ready">Listo</string>
</resources>
