<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ingresar"
    tools:showIn="@layout/activity_ingresar">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/backgroundMaster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="173dp"
                app:srcCompat="@drawable/web_hi_res_saa_512" />

            <TextView
                android:id="@+id/labelInfoLogin"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:text="@string/tagInfoLogin"
                android:textAlignment="center"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/cmpUsernameIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user_icon"
                android:hint="Nombre de Usuario"
                android:inputType="text"
                android:paddingTop="@dimen/vertical_items_margin"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/cmpPasswordIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_icon"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingTop="@dimen/vertical_items_margin"
                android:selectAllOnFocus="true" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/vertical_items_margin">

                    <CheckBox
                        android:id="@+id/rememberMe"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rememberMe" />

                    <Button
                        android:id="@+id/btnForgotPass"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/backgroundMaster"
                        android:text="@string/forgotPassword" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </TableLayout>

            <Button
                android:id="@+id/btnLoginIngresar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorGreen"
                android:enabled="true"
                android:paddingTop="@dimen/vertical_items_margin"
                android:text="@string/action_sign_in"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/haveAccountTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="@dimen/vertical_items_margin"
                android:textAlignment="center"
                tools:text="@string/notAccount" />

            <Button
                android:id="@+id/btnRegisterNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGreen"
                android:paddingTop="@dimen/vertical_items_margin"
                android:text="@string/register"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>