<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="173dp"
                app:srcCompat="@drawable/web_hi_res_saa_512" />

            <TextView
                android:id="@+id/labelInfoLogin"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:text="@string/tagInfoLogin"
                android:textAlignment="center"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/cmpUsername"
                android:paddingTop="@dimen/vertical_items_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user_icon"
                android:hint="Nombre de Usuario"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/cmpPassword"
                android:paddingTop="@dimen/vertical_items_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_icon"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:paddingTop="@dimen/vertical_items_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="187dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rememberMe" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="180dp"
                        android:layout_height="24dp"
                        android:text="@string/forgotPassword"
                        android:textAlignment="center"
                        android:textColor="@color/colorOrange"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </TableLayout>

            <Button
                android:id="@+id/login"
                android:paddingTop="@dimen/vertical_items_margin"
                android:layout_width="250dp"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:background="@color/colorGreen"
                android:enabled="false"
                android:text="@string/action_sign_in"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText"
                android:paddingTop="@dimen/vertical_items_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:text="@string/notAccount" />

            <Button
                android:id="@+id/button"
                android:paddingTop="@dimen/vertical_items_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>
    </ScrollView>

    <!--ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="226dp" /-->

</android.support.constraint.ConstraintLayout>