<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorGreen"
                android:elegantTextHeight="true"
                android:ems="10"
                android:enabled="false"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@string/welcomereg"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/infoTag2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGreen"
                android:fontFamily="@font/arimo"
                android:text="@string/infoUser00"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/userNameTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre(s)"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etlastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="15dp" />

            <TextView
                android:id="@+id/userLastNameTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apellido(s)"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="15dp" />

            <TextView
                android:id="@+id/birthDateTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha de Nacimiento"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etUserMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="15dp" />

            <TextView
                android:id="@+id/userMailTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Correo Electrónico"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/infoTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGreen"
                android:fontFamily="@font/arimo"
                android:paddingTop="25dp"
                android:text="@string/signData"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="15dp" />

            <TextView
                android:id="@+id/userTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre de Usuario"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="15dp" />

            <TextView
                android:id="@+id/passwordTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contraseña"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/infoRegisterTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Para enviar tus datos pulsa en el botón Amarillo"
                android:textAlignment="center" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabRegisterSaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:backgroundTint="@android:color/holo_orange_light"
                app:srcCompat="@drawable/ic_ready_all" />

            <Button
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:drawableTop="@drawable/ic_home"
                android:drawablePadding="5dp"
                android:text="Volver al Inicio"
                android:textColor="@android:color/black" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>